# vllm-version-monitor

./: .gitattributes  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: release-report.yml  vllm-monitor.yml
agent/: capabilities.py  evolution_brief.py  generate_briefs.py  monitor.py  project_detail.py  projects.py  report-prompt.md  report.py  state.json  storage.py
config/: capabilities.json  projects.json  sglang.yaml  vllm.yaml
data/raw/: sglang_releases.json  vllm_releases.json
output/json/: sglang_releases_normalized.json
output/qa/: verification.json
output/sglang/: build_manifest.json
output/vllm/: build_manifest.json
reports/: 2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  (+100 more)
schemas/: build_manifest.schema.json  verification.schema.json
templates/: evolution-brief-prompt.md  evolution-brief.md  report.md  report_theme.py
tests/: test_classify.py  test_manifest.py  test_normalize.py  test_report_smoke.py  test_stages.py  test_storage.py
(+33 files in other folders)
