[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "release-report"
version = "0.2.0"
description = "Reproducible GitHub release intelligence and verified PDF reporting"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
  "reportlab>=4.0",
  "Pillow>=10.0",
  "packaging>=23.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
release-report = "release_report.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
